<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50ssp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/overflow_but"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/overflowMenuDesc"
            app:srcCompat="@drawable/ic_more"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton

                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:background="@drawable/button_round"
                android:id="@+id/start_new_translation"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="start"
                android:gravity="center"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/start_new_translation"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:letterSpacing="0"
                android:id="@+id/start_new_conversation"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="end"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/start_new_conversation"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_main"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logoHome"
                android:scaleType="fitXY"
                tools:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:id="@+id/setting"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="16dp"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />


            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:id="@+id/historyActivity"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/history"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:id="@+id/bookmarkActivity"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/bookmarks"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:id="@+id/dic"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/dictionary"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />
            <androidx.appcompat.widget.AppCompatButton
                style="?android:borderlessButtonStyle"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:background="@drawable/button_round"
                android:id="@+id/rateUs"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/rateus"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
